# se-interview

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.tmp  README.md  agent.py  api.py  pyproject.toml
app/: __init__.py  agent.py  api.py  config.py  observability.py  tools.py
scripts/: create_frustrated_dataset.py  evaluate_tool_selection_correctness.py  evaluate_user_frustration.py  export_phoenix_spans.py  run_prompt_batch.py  run_traced_prompt.py
tests/: test_api.py  test_config.py  test_tools.py
